# RealTimeCutVADCXXLibrary

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_android_so.sh
CmakeProject/main/: vad_file.cpp
Frameworks/: README.txt
RealTimeCutVADCXXLibrary/: CMakeLists.txt  realtime_cut_vad.h
RealTimeCutVADCXXLibrary.xcodeproj/: project.pbxproj
RealTimeCutVADCXXLibrary/Frameworks/onnxruntime.xcframework/: Info.plist
RealTimeCutVADCXXLibrary/Frameworks/onnxruntime.xcframework/ios-arm64/onnxruntime.framework/Headers/: coreml_provider_factory.h  onnxruntime_cxx_api.h  onnxruntime_run_options_config_keys.h
RealTimeCutVADCXXLibrary/Frameworks/onnxruntime.xcframework/ios-arm64_x86_64-simulator/onnxruntime.framework/: Info.plist
RealTimeCutVADCXXLibrary/Frameworks/onnxruntime.xcframework/macos-arm64_x86_64/onnxruntime.framework/Versions/A/Headers/: onnxruntime_c_api.h
RealTimeCutVADCXXLibrary/Frameworks/onnxruntime.xcframework/macos-arm64_x86_64/onnxruntime.framework/Versions/Current/: onnxruntime
RealTimeCutVADCXXLibrary/Frameworks/onnxruntime.xcframework/macos-arm64_x86_64/onnxruntime.framework/Versions/Current/Headers/: onnxruntime_cxx_inline.h  onnxruntime_float16.h  onnxruntime_lite_custom_op.h  onnxruntime_session_options_config_keys.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/: Info.plist
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64/webrtc_audio_processing.framework/: webrtc_audio_processing
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64/webrtc_audio_processing.framework/Headers/absl/base/: policy_checks.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64/webrtc_audio_processing.framework/Headers/absl/base/internal/: direct_mmap.h  low_level_alloc.h  raw_logging.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64/webrtc_audio_processing.framework/Headers/absl/flags/internal/: parse.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64/webrtc_audio_processing.framework/Headers/absl/meta/: type_traits.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64/webrtc_audio_processing.framework/Headers/absl/strings/: cordz_test_helpers.h  str_cat.h  str_format.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64/webrtc_audio_processing.framework/Headers/absl/synchronization/: mutex.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64/webrtc_audio_processing.framework/Headers/absl/types/: span.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64/webrtc_audio_processing.framework/Headers/webrtc-audio-processing-1/api/: scoped_refptr.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64/webrtc_audio_processing.framework/Headers/webrtc-audio-processing-1/rtc_base/: arraysize.h  ref_count.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64_x86_64-simulator/webrtc_audio_processing.framework/: webrtc_audio_processing
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64_x86_64-simulator/webrtc_audio_processing.framework/Headers/absl/base/: config.h  options.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64_x86_64-simulator/webrtc_audio_processing.framework/Headers/absl/flags/: marshalling.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64_x86_64-simulator/webrtc_audio_processing.framework/Headers/absl/strings/: cord_buffer.h  cord_test_helpers.h  escaping.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64_x86_64-simulator/webrtc_audio_processing.framework/Headers/absl/types/: compare.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/ios-arm64_x86_64-simulator/webrtc_audio_processing.framework/Headers/webrtc-audio-processing-1/rtc_base/: checks.h  deprecation.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/macos-arm64_x86_64/webrtc_audio_processing.framework/: Info.plist  webrtc_audio_processing
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/macos-arm64_x86_64/webrtc_audio_processing.framework/Headers/absl/base/: attributes.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/macos-arm64_x86_64/webrtc_audio_processing.framework/Headers/absl/strings/: cord.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/macos-arm64_x86_64/webrtc_audio_processing.framework/Headers/webrtc-audio-processing-1/api/: array_view.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/macos-arm64_x86_64/webrtc_audio_processing.framework/Headers/webrtc-audio-processing-1/rtc_base/: constructor_magic.h  type_traits.h
RealTimeCutVADCXXLibrary/Frameworks/webrtc_audio_processing.xcframework/macos-arm64_x86_64/webrtc_audio_processing.framework/Modules/: module.modulemap
RealTimeCutVADCXXLibrary/main/: vad_file.cpp
jniLibs/: README.txt
(+29 files in other folders)
